# jvanderaa.github.io

./: .gitignore  .gitmodules  .tool-versions  404.html  CLAUDE.md  CNAME  README.md  TODO.md  check-more-tag  convert_alerts.py  convert_shortcode_to_admonitions.py  extract_dates.py  feed.xml  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  generate_requirements.sh  go.mod  go.sum  gpg-sign-test.txt  hugo.toml  index.html  index.md  mkdocs.yml  pyproject.old.toml  pyproject.toml  readme.MD  requirements.old.txt  requirements.txt  sitemap.xml
2023-automation-review-top-3/: index.html
_archive/: convert_frontmatter_tags_to_categories.py  convert_shortcode_to_codeblocks.py  create_post.py  extract_date_lines.py  process_dates.py
about/: index.html
ansible-asa-command/: index.html
ansible-asa-og/: index.html
ansible-blocks/: index.html
ansible-cisco-ios-interface/: index.html
ansible-cisco-ios-interfaces-module/: index.html
ansible-cisco-ios-user/: index.html
ansible-cli-vs-ios-command/: index.html
ansible-cli-vs-ios-high-level/: index.html
ansible-ios-banner/: index.html
ansible-ios-bgp-module/: index.html
ansible-ios-vlan/: index.html
ansible-network-engine-ntc-templates/: index.html
ansible-output-work/: index.html
ansible-saving-cisco-configs-ios/: index.html
ansible_for_enterprise/: index.html
apple_automator/: index.html
archive/: index.html
automation-inventory/: index.html
blog_update_v2/: index.html
book/: index.html
book-open-source-network-management/: index.html
(+574 files in other folders)
