[tool.poetry]
name = "joshv-blog"
version = "1.0.0"
description = "New Blog Working..."
authors = ["Josh VanDeraa <josh@josh-v.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^9.5.24"
mkdocs-glightbox = "^0.4.0"
mkdocs-rss-plugin = "^1.12.2"
neoteroi-mkdocs = "^1.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
