[project]
name = "jvanderaa-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-material>=9.5.34",
    "mkdocs-rss-plugin>=1.15.0",
    "neoteroi-mkdocs>=1.1.0",
]

[tool.setuptools]
py-modules = []
